2021-06-19 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/Port.h:
	* Source/NSSocketPort.m:
	Extend the API for TLS support in Distributed Objects so that we have
	separate settings for whether the port is acting as a client or
	server.

2021-06-19 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTLS.m:
	* Source/NSSocketPort.m:
	Improve reporting of TLS handshake errors, fix a few leaks and
	generally make encryption of DO connections better.

2021-06-17 Frederik Seiffert <frederik@algoriddim.com>

	* Source/Additions/Unicode.m:
	Fix lookup of string encodings with high numeric values in
	encoding table when they are interpreted as negative numbers
	for some platforms/compilers (pertains
	NSUTF16*EndianStringEncoding and NSUTF32*StringEncoding).

2021-06-03 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/GSTLS.h: New session ivar for I/O handle.
	* Source/GSTLS.m: Report the I/O handle in debug logs so we can
	more easily track which logs refer apply to the objects using a
	session.
	* Source/NSSocketPort.m: debug improvements plus fixes to the code
	for initiating connections so that the initial port information is
	reliably written to the handle.

2021-06-02 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Foundation/Foundation.h: Add missing import for
        NSByteCountFormatter.

2021-05-31 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/GSTLS.h: ([GSTLSCredentials selfSigned:])
	* Source/GSTLS.m: Add new method to use certtool to generate a
	key and a self-signed certificate.  Use the new method to set up
	server sessions if no certificate/key is configured.
	* Headers/Foundation/NSPort.h: ([NSSocketPost setOptionsForTLS:])
	* Source/NSSocketPort.m: New methods to configure socket ports to
	use TLS so that inter-host distributed object connections can be
	securely encrypted.  The class method should turn on encryption
	for all subsequent connections using socket ports (the instance