@@ -1,3 +1,9 @@
+2021-07-02 Frederik Seiffert <frederik@algoriddim.com>
+
+	* Source/Additions/Unicode.m:
+	Fix possible heap corruption when converting to
+	NSNonLossyASCIIStringEncoding.
+
 2021-06-19 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Headers/Foundation/Port.h:
